# UOSM-EfficiencyML

./: .gitignore  README.md  requirements.txt
ai_service/: package.xml  setup.py
ai_service/ai_service/: world_control.py
gazebo_ai/: package.xml  setup.cfg  setup.py
gazebo_ai/gazebo_ai/: world_control.py
gym_gazebo/agents/: race_agent.py
gym_gazebo/environments/: race_track.py
